istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-app-vs
spec:
  hosts:
    - "*"
  gateways:
    - node-app-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: node-app-service
            port:
              number: 80
